# deployx-server-sdk

./: .gitignore  README.md  check.py  func.py  test.py  test_http_pool.py  test_iohttp.py  test_requests.py
deployx_server_sdk.egg-info/: PKG-INFO
dxclient/: __init__.py  client.py  config.py  setup.py  store.py  tests.py
dxclient/tests/: __init__.py
package/: pyproject.toml  setup.cfg  setup.py
package/src/dxclient/: __init__.py
package/tests/: __init__.py  test_config.py  test_functionals.py
