[metadata]
name = deployx-server-sdk
version = 1.0.6
author = CaptainKryuk   
author_email = sir.kryukov@gmail.com
description = Programm for fast deploy and autotests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CaptainKryuk/deployx-server-sdk
project_urls =
    Bug Tracker = https://github.com/CaptainKryuk/deployx-server-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires=['urllib3']

[options.packages.find]
where = src